manifests/v2/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sk3003-svc-canary
  namespace: skala3-ai1
spec:
  type: ClusterIP
  selector:
    app: sk3003-app
    version: v2
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
