manifests/v2/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sk3003-ingress-canary
  namespace: skala3-ai1
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
    nginx.ingress.kubernetes.io/use-regex: "true" # ★ 추가: 정규식을 활성화합니다.
spec:
  ingressClassName: public-nginx #
  tls: #
  - hosts: #
    - 'sk3003.project.skala-ai.com' #
    secretName: skala26a-project-tls-cert #
  rules: #
  - host: sk3003.project.skala-ai.com #
    http: #
      paths: #
      - backend: #
          service: #
            name: sk3003-svc-canary
            port: #
              number: 80 #
        path: /3003(/|$)(.{0,})
        pathType: ImplementationSpecific #
